<resources>
    <string name="app_name">Tickist</string>
    <string name="home_screen_title">Nhắc nhở</string>
    <string name="page_today" translatable="false">Today</string>
    <string name="page_list" translatable="false">List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">%s</string>
    <string name="new_topic_fragment_label">New Topic Fragment</string>
    <string name="label_focus" translatable="false">Focus</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start" translatable="false">Start</string>
    <string name="pause" translatable="false">Pause</string>
    <string name="continues" translatable="false">Continue</string>
    <string name="apply" translatable="false">Apply</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_home">Danh sách của tôi</string>
    <string name="title_home_today">Hôm nay</string>
    <string name="title_faster_note">Ghi chú nhanh</string>
    <string name="search">search</string>
    <string name="favorite">favorite</string>
    <string name="title_create">Tạo mới</string>
    <string name="transaction_topic_to_detail">topic to detail</string>
    <string name="select_date_range">Chọn khoảng ngày</string>
    <string name="select_timer_title">Chọn thời gian</string>
    <string name="format_today">Hôm nay,</string>
    <string name="format_yesterday">Hôm qua,</string>
    <string name="setting_show_task_done_title">Hiển thị lời nhắc đã hoàn tất</string>
    <string name="setting_hire_task_done_title">Ẩn lời nhắc đã hoàn tất</string>
    <string name="new_data_title">Thêm mới</string>
    <string name="notify_title">Thông báo</string>
    <string name="content_delete_topic_title">Bạn có chắc chắn muốn xoá công việc này khỏi danh sách?</string>
    <string name="cancel_action">Huỷ</string>
    <string name="accept_action">Đồng ý</string>
    <string name="notify_channel">CHANNEL_123</string>
    <string name="notify_name_channel">CHANNEL name</string>
    <string name="create_notify_new">Bạn chưa tạo nhắc nhở</string>
    <!-- change purchase date -->
    <string name="title_pick_date">Chọn ngày</string>
    <string name="title_pick_time">Chọn giờ</string>

    <string name="ok">Đồng ý</string>
    <string name="add">Thêm</string>
    <string name="cancel">Huỷ</string>
    <string name="add_new_work">Thêm một tiêu đề mới</string>
    <string name="title_show_content">Hiển thị lời nhắc đã hoàn tất</string>
    <string name="title_hide_content">Ẩn lời nhắc đã hoàn tất</string>

    <!--name motion-->
    <string name="transition_topic_detail">transition_topic_detail_%1$s</string>
    <string name="transition_topic_to_detail">transition_topic_to_detail</string>

    <!--menu work-->
    <string name="menu_hide_work">Ẩn danh mục</string>
    <string name="menu_delete_work">Xoá danh mục</string>

    <string name="message_alert_hide_work_title">Ẩn danh mục sẽ khiến tất cả các tác vụ trong danh mục được hoàn thành</string>
    <string name="message_alert_delete_work_title">Bạn có chắc chắn muốn xoá danh mục này khỏi danh sách?</string>
    <string name="message_alert_hide_error_work_title">Bạn không thể ẩn danh mục này khi chưa hoàn thành hết các tác vụ</string>

    <!--    <string name="empty_list"><![CDATA[<b>Danh sách trống, chọn biểu tượng</b><br>dấu + để thêm 1 danh sách mới]]></string>-->
    <string name="empty_list">Thêm vào việc cần làm, còn lại để Tickist lo!</string>
    <string name="warning_title_min">Tiêu đề phải có tối thiểu 1 ký tự!</string>
    <string name="support_list_reminders">Đây là danh sách ghi chú nhanh, Lưu ý: Ghi chú nhanh sẽ tự động xoá sau khi bạn click Xong</string>
    <string name="support_new_title">Click button để thêm danh sách mới của riêng bạn, danh sách đã xong sẽ được hiển thị theo lựa chọn của bạn</string>
    <string name="topic_title">Chủ đề</string>
    <string name="tap_tap" translatable="false">Tap Tap</string>
    <string name="id_expanded" translatable="false">id_expanded</string>
    <string name="id_position" translatable="false">id_position</string>

    <string name="add_new_topic_hint">Thêm một danh sách mới…</string>

    <string name="add_new_work_hint">Thêm một công việc mới…</string>

    <string name="title_setting">Cài đặt</string>
    <string name="option_delete_work_done">"Xoá lời nhắc sau khi đã hoàn tất \n (Chỉ tính từ thời điểm hiện tại)"</string>
    <string name="title_save">Lưu lại</string>
    <string name="action_done" translatable="false">Xoá</string>
    <string name="page_home" translatable="false">Tasklist</string>
    <string name="page_calendar" translatable="false">In day</string>
    <string name="page_focus" translatable="false">Focus</string>
    <string name="page_setting" translatable="false">Setting</string>
    <string name="page_english" translatable="false">English</string>
    <string name="show_running" translatable="false">Task Task is Running!</string>


    <!--    example-->
    <string name="example_3_dialog_delete_confirmation" translatable="false">Delete this event?</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="close" translatable="false">Close</string>
    <string name="example_3_title" translatable="false">Example 3</string>
    <string name="example_3_empty_input_text" translatable="false">Text is empty</string>

    <string name="title_reminder_fast">Nhắc nhở nhanh</string>
    <string name="you_think_hint">Bạn đang nghĩ gì</string>
    <string name="swipe_up_suggest">Vuốt lên để thêm nhanh nhắc nhở</string>
    <string name="swipe_up_suggest_1">Giữ lâu vào task và di chuyển để thay đổi vị trí</string>
    <string name="swipe_up_suggest_2">Click vào task lớn để chia nhỏ công việc</string>
    <string name="reminder_notification">Nhắc nhở vào:</string>
    <string name="desc_hint">Mô tả thêm (không bắt buộc)</string>
    <string name="error_messenger_change_time">Không thể thay đổi thời gian khi đang trong 1 quá trình</string>
    <string name="setting_review_app">Đánh giá ứng dụng (ủng hộ chúng tôi có thêm động lực nhé)</string>

    <string name="button_text_complete" translatable="false">Complete</string>
    <string name="button_text_next" translatable="false">Next</string>
    <string name="content_minute">Phút</string>
    <string name="success_review_app">Bạn đã đánh giá ứng dụng rồi</string>
    <string name="success_review_app_done">Bạn đã đánh giá ứng dụng của chúng tôi rồi</string>
    <string name="alert_cancel_focus">Hành động sẽ huỷ bỏ tác vụ đang chạy</string>
    <string name="desc_select_todo">-> Todo sẽ tự động được hoàn thành khi hết thời gian</string>
    <string name="alert_done_focus">Làm tốt lắm, đến lúc thư giãn một chút rồi</string>
    <string name="onboarding_topic_first">Lên danh sách nhắc nhở</string>
    <string name="onboarding_topic_second">Chế độ tập trung sâu</string>
    <string name="onboarding_topic_third">Khởi đầu ngày mới năng động</string>
    <string name="onboarding_first">Lên lịch nhắc nhở mỗi ngày sẽ trở thành thói quen để có một ngày năng suất</string>
    <string name="onboarding_second">Bạn hoàn toàn có thể tập trung khi ở chế độ này với mục tiêu thời gian hoàn thành nhắc nhở đó</string>
    <string name="onboarding_third">Danh sách nhắc nhở hằng ngày và theo chủ đề là bước khởi động hoàn hảo cho một ngày mới</string>
    <string name="welcomes" translatable="false">Welcomes ❤️</string>
    <string-array name="day">
        <item>T2</item>
        <item>T3</item>
        <item>T4</item>
        <item>T5</item>
        <item>T6</item>
        <item>T7</item>
        <item>CN</item>
    </string-array>

</resources>