<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/tvSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cereal_extra_bold"
        android:text="@string/title_setting"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintTop_toBottomOf="@id/tvSetting">

        <RadioButton
            android:id="@+id/radioShow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting_show_task_done_title" />

        <RadioButton
            android:id="@+id/radioHide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting_hire_task_done_title" />

        <RadioButton
            android:id="@+id/radioDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/option_delete_work_done" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>