<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.reminds.ui.fragment.home.HomeFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_NewTopicFragment"
            app:destination="@id/NewTopicFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.reminds.ui.fragment.detail.ListWorkFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_list_work">
        <argument
            android:name="works"
            android:defaultValue="@null"
            app:argType="com.example.common.base.model.WorkDataEntity"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/NewTopicFragment"
        android:name="com.example.reminds.ui.fragment.newtopic.NewTopicBtsFragment"
        android:label="@string/new_topic_fragment_label"
        tools:layout="@layout/fragment_new_topic_bts" />
</navigation>